[#7] Add validation in edit page about user account.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -148,14 +148,6 @@ console.log(er);}
 		<td colspan="3"><input style="display:none" type="text" id="email" name="email" value="$encoder.htmlEncode( $userCredentials.username )"></td>
 	</tr>
 
-  <script type="text/javascript">
-     $("#username").change(function(){
-         var username = $("#username").val();
-         $("#email").val(username);
-     });
-  </script>
-
-
     #foreach( $attribute in $attributes )
         #if ($attribute.displayName == "Work Phone")
             #set($workPhone = $attribute)
@@ -176,7 +168,7 @@ console.log(er);}
 
     <tr class="account">
         <td><label for="attribute_$workPhone.id">$i18n.getString("$workPhone.displayName")</label></td>
-        <td colspan="3"><input type="$workPhone.valueType" id="attribute_$workPhone.id" name="attribute_$workPhone.id" value="$workPhoneValue"></td>
+        <td colspan="3"><input class="workPhone" type="$workPhone.valueType" id="attribute_$workPhone.id" name="attribute_$workPhone.id" value="$workPhoneValue"></td>
     </tr>
 
 
@@ -255,3 +247,26 @@ console.log(er);}
   </p>
 
 </form>
+
+  <script type="text/javascript">
+     $("#username").change(function(){
+         var username = $("#username").val();
+         $("#email").val(username);
+     });
+
+      var validate_phone_number = function (elelment_type) {
+        $(elelment_type).one('keyup', function(){
+          var tele = $(elelment_type).val();
+
+          var is_match = tele.match(/^([+|\d])+([\s|\d])+([\d])$/);
+          if (!is_match)
+          {
+            $(elelment_type).after('<br /><span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
+          }
+        });
+
+     };
+     validate_phone_number("#phoneNumber");
+     validate_phone_number(".workPhone");
+      
+  </script>
