[#7] Remove the validation error after input a correct phone number & for edit page.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -255,13 +255,17 @@ console.log(er);}
      });
 
       var validate_phone_number = function (elelment_type) {
-        $(elelment_type).one('keyup', function(){
+        $(elelment_type).change(function(){
           var tele = $(elelment_type).val();
 
           var is_match = tele.match(/^([+|\d])+([\s|\d])+([\d])$/);
           if (!is_match)
           {
             $(elelment_type).after('<br /><span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
+          }
+          else
+          {
+            $('span.error').remove();
           }
         });
 
