--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/dashboard.vm
@@ -40,21 +40,22 @@ jQuery( document ).ready( function() {
 </script>
 
 <div id="dashboardHeader"><h3>
+<!--
 #if( !$currentUser.profileFilled )<a class="alert" href="../dhis-web-commons-about/showUpdateUserProfileForm.action">$i18n.getString( "update_profile" )</a> &nbsp;&#8226;&nbsp;#end
 <a href="showSendFeedback.action">$i18n.getString( "write_feedback" )</a>
 #if( $messageCount > 0 )&nbsp;&#8226;&nbsp; <a class="alert" href="message.action">$messageCount #if( $messageCount > 1 )$i18n.getString( "unread_messages" )#else$i18n.getString( "unread_message" )#end</a> #end
 &nbsp;&#8226;&nbsp; #if( $interpretationCount > 0 )<a class="alert" href="interpretation.action">$interpretationCount #if( $interpretationCount > 1 )$i18n.getString( "new_interpretations" )#else$i18n.getString( "new_interpretation" )#end</a>
 #else<span id="shareHelpLink" onclick="dhis2.db.showShareHelp()">$i18n.getString( "share_interpretation" )</span> #end
-&nbsp;&#8226;&nbsp; <span id="dashboardTitle"></span>
+&nbsp;&#8226;&nbsp; <span id="dashboardTitle"></span>-->
 </h3></div>
 
-<div id="dashboardMenu" class="horizontalMenu">
+<!--<div id="dashboardMenu" class="horizontalMenu">
     <ul>
         <li><a class="greyButtonLink" href="profile.action?id=${currentUser.uid}">$i18n.getString( "profile" )</a></li>
         <li><a class="greyButtonLink" href="message.action">$i18n.getString( "messages" )</a></li>
         <li><a class="greyButtonLink" href="interpretation.action">$i18n.getString( "interpretations" )</a></li>
     </ul>
-</div>
+</div>-->
 
 <div id="searchDiv"><input type="text" id="searchField" autocomplete="off" placeholder="$i18n.getString( 'search_for_users_charts_maps_reports' )"></div>
 <div id="hitDiv"></div>
