--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -261,11 +261,16 @@ console.log(er);}
           var is_match = tele.match(/^([+|\d])+([\s|\d])+([\d])$/);
           if (!is_match)
           {
-            $(elelment_type).after('<br /><span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
+            
+            if (!($('span.error').lenght > 0))
+            {
+              $(elelment_type).after('<br class="error" /><span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
+            }
           }
           else
           {
             $('span.error').remove();
+            $('br.error').remove();
           }
         });
 
