--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -262,7 +262,7 @@ console.log(er);}
           if (!is_match)
           {
             
-            if (!($('span.error').lenght > 0))
+            if ($('span.error').length <= 0)
             {
               $(elelment_type).after('<br class="error" /><span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
             }
