[#7] Fix the defect about workphone number.

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/macros.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/macros.vm
@@ -315,6 +315,10 @@ jQuery.each(attributes, function(i, item) {
 	{
 		json.value = jqItem.find(":selected").val();
 	}
+	else if( jqItem.is("input[type='tel']"))
+	{
+	    json.value = jqItem.val();
+	}
 
 	json = JSON.stringify(json);
 
