[#7] Telephone number should be null and no error messages displaying.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -323,6 +323,11 @@
                     $('.error' + elementId).addClass('displayNone');
                 }
             }
+            else {
+                $('.error' + elementId).removeClass('displayNone');
+                $('.error' + elementId).addClass('displayNone');
+            }
+
         });
     };
 
