--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -309,6 +309,9 @@ input[type=tel] {
 
                 $('.error' + elementId).addClass('displayNone');
             }
+          } else {
+              $('.error' + elementId).removeClass('displayNone');
+              $('.error' + elementId).addClass('displayNone');
           }
 
         });
