--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -232,7 +232,7 @@
         <tr class="account">
             <td><label for="attribute_$orgName.id">$i18n.getString("$orgName.displayName")<em
                     title="$i18n.getString( 'required' )" class="required">*</em></label></td>
-            <td colspan="3"><input type="text" id="attribute_$orgName.id" name="attribute_$orgName.id">
+            <td colspan="3"><input type="text" id="attribute_$orgName.id" name="attribute_$orgName.id" required="required">
             </td>
         </tr>
 
@@ -297,40 +297,7 @@
         $("#email").val(username);
     });
 
-    var validate_phone_number = function (elementId) {
-        var elementType = '';
-
-        if (elementId === 'phoneNumber') {
-            elementType = '#' + elementId;
-        } else {
-            elementType = '.' + elementId;
-        }
-
-        $(elementType).intlTelInput({
-            utilsScript: "../dhis-web-commons/javascripts/intl-tel-input/js/utils.js",
-            allowDropdown: false,
-            initialCountry: "mz",
-        });
-
-
-        $(elementType).change(function () {
-
-            if ($.trim($(elementType).val())) {
-
-                if (!$(elementType).intlTelInput("isValidNumber")) {
-                    $('.error' + elementId).removeClass('displayNone');
-                } else {
-                    $('.error' + elementId).addClass('displayNone');
-                }
-            }
-            else {
-                $('.error' + elementId).removeClass('displayNone');
-                $('.error' + elementId).addClass('displayNone');
-            }
-
-        });
-    };
-
+ 
     validate_phone_number('workPhone');
     validate_phone_number('phoneNumber');
 
