[#16] Remove importance label from add validation rule page.

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
@@ -18,12 +18,12 @@
         <td><textarea name="instruction"></textarea></td>
     </tr>
 	<tr>
-		<td><label for="importance">$i18n.getString( "importance" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>
+		<!--<td><label for="importance">$i18n.getString( "importance" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>-->
 		<td>
-			<select type="text" id="importance" name="importance">
-				<option value="LOW">$i18n.getString( "low" )</option>
-				<option value="MEDIUM" selected="selected">$i18n.getString( "medium" )</option>
-				<option value="HIGH">$i18n.getString( "high" )</option>
+			<select type="text" id="importance" name="importance" value="HIGH" style="display: none">
+				<!--<option value="LOW">$i18n.getString( "low" )</option>
+				<option value="MEDIUM" selected="selected">$i18n.getString( "medium" )</option>-->
+				<option value="HIGH" selected="selected">$i18n.getString( "high" )</option>
 			</select>
 		</td>
 	</tr>
@@ -58,7 +58,7 @@
 			<img title="$i18n.getString('clear_expression')" onclick='setNullExpression();' src='../images/edit-clear.png' style='width: 20px;cursor:pointer' />
 		</td>
 	</tr>
-	<tr id="sequentialSampleCountTR" style="display:none">
+	<!--<tr id="sequentialSampleCountTR" style="display:none">
 		<td><label for="sequentialSampleCount">$i18n.getString( "sequential_sample_count" )</label></td>
 		<td><input type="text" id="sequentialSampleCount" name="sequentialSampleCount"></td>
 	</tr>
@@ -70,7 +70,7 @@
 	<tr id="sequentialSkipCountTR" style="display:none">
 		<td><label for="sequentialSkipCount">$i18n.getString( "sequential_skip_count" )</label></td>
 		<td><input type="text" id="sequentialSkipCount" name="sequentialSkipCount"></td>
-	</tr>
+	</tr>-->
 	<tr>
 		<td><label for="operatorId">$i18n.getString( "operator" ) <em title="$i18n.getString( "required" )" class="required">*</em></label></td>
 		<td>
