[#16] Fix the defect in the update user page.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -1,12 +1,16 @@
 #foreach( $attribute in $attributes )
     #if ($attribute.displayName == "Work Phone")
         #set($workPhone = $attribute)
+        #set($workPhoneValue = $attributeValues.getOrDefault($attribute.id, ""))
     #elseif ($attribute.displayName == "Organisation Type")
         #set($orgType = $attribute)
+        #set($orgTypeValue = $attributeValues.get($attribute.id))
     #elseif ($attribute.displayName == "Organisation Name")
         #set($orgName = $attribute)
+        #set($orgNameValue = $attributeValues.getOrDefault($attribute.id, ""))
     #elseif ($attribute.displayName == "Notes")
         #set($notes = $attribute)
+        #set($notesValue = $attributeValues.getOrDefault($attribute.id, ""))
     #else
     #end
 #end
