--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
@@ -28,15 +28,15 @@
 		</td>
 	</tr>
 	<tr>
-		<td><label for="ruleType">$i18n.getString( "rule_type" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>
+<!--		<td><label for="ruleType">$i18n.getString( "rule_type" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>-->
 		<td>
-			<select type="text" id="ruleType" name="ruleType" onchange="changeRuleType()">
-				<option value="VALIDATION" selected="selected">$i18n.getString( "validation" )</option>
-				<option value="SURVEILLANCE">$i18n.getString( "surveillance" )</option>
+			<select type="text" id="ruleType" name="ruleType" onchange="changeRuleType()" style="display: none">
+<!--				<option value="VALIDATION" selected="selected">$i18n.getString( "validation" )</option>-->
+				<option value="SURVEILLANCE" selected="selected">$i18n.getString( "surveillance" )</option>
 			</select>
 		</td>
 	</tr>
-	<tr id="organisationUnitLevelTR" style="display:none">
+	<tr id="organisationUnitLevelTR">
 		<td><label for="organisationUnitLevel">$i18n.getString( "organisation_unit_level" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>
 		<td>
 			<select type="text" id="organisationUnitLevel" name="organisationUnitLevel">
@@ -48,14 +48,12 @@
 		</td>
 	</tr>
 	<tr>
-		<td><label for="periodType">$i18n.getString( "period_type" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>
+<!--		<td><label for="periodType">$i18n.getString( "period_type" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>-->
 		<td>
-			<select type="text" id="periodTypeName" name="periodTypeName">
-				#foreach ( $periodType in $periodTypes )
-				 <option value="$periodType.name" #if( $periodType.name.equals( ${monthlyPeriodTypeName} ) ) selected #end>$encoder.htmlEncode( $i18n.getString($periodType.name) )</option>
-				#end						
+			<select type="text" id="periodTypeName" name="periodTypeName" style="display: none">
+				<option value="Weekly" selected="selected">Weekly</option>
 			</select>
-			<img title="$i18n.getString('clear_expression')" onclick='setNullExpression();' src='../images/edit-clear.png' style='width: 20px;cursor:pointer' />
+			<!--<img title="$i18n.getString('clear_expression')" onclick='setNullExpression();' src='../images/edit-clear.png' style='width: 20px;cursor:pointer' />-->
 		</td>
 	</tr>
 	<!--<tr id="sequentialSampleCountTR" style="display:none">
