--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/updateValidationRuleForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/updateValidationRuleForm.vm
@@ -38,13 +38,13 @@
 		</td>
 	</tr>
 	<tr>
-		<td><label for="ruleType">$i18n.getString( "rule_type" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>
+		<!--<td><label for="ruleType">$i18n.getString( "rule_type" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>-->
 		<td>
-			<select type="text" id="ruleType" name="ruleType" onchange="changeRuleType()" disabled="disabled">
-				<option value="VALIDATION" #if( $validationRule.ruleType == 'VALIDATION' ) selected #end>$encoder.htmlEncode( $i18n.getString( "validation" ) )</option>
+			<select type="text" id="ruleType" name="ruleType" onchange="changeRuleType()" disabled="disabled" style="display: none">
+				<!--<option value="VALIDATION" #if( $validationRule.ruleType == 'VALIDATION' ) selected #end>$encoder.htmlEncode( $i18n.getString( "validation" ) )</option>-->
 				<option value="SURVEILLANCE" #if( $validationRule.ruleType == 'SURVEILLANCE' ) selected #end>$encoder.htmlEncode( $i18n.getString( "surveillance" ) )</option>
 			</select>
-			<img title="$i18n.getString( 'clear_expression' )" onclick="clearRuleExpression()" src="../images/edit-clear.png" style="width: 20px; cursor:pointer;" />
+			<!--<img title="$i18n.getString( 'clear_expression' )" onclick="clearRuleExpression()" src="../images/edit-clear.png" style="width: 20px; cursor:pointer;" />-->
 		</td>
 	</tr>
 	<tr id="organisationUnitLevelTR" #if( $!validationRule.ruleType != 'SURVEILLANCE' ) style="display:none;" #end>
@@ -58,13 +58,11 @@
 		</td>
 	</tr>
 	<tr>
-		<td><label for="periodType">$i18n.getString( "period_type" )</label></td>
-		<td><select type="text" id="periodTypeName" name="periodTypeName" disabled="disabled">
-				#foreach ( $periodType in $periodTypes )
-             	<option value="$periodType.name" #if( $validationRule.periodType.name.equals($periodType.name ) ) selected #end>$encoder.htmlEncode( $i18n.getString( $periodType.name ) )</option>
-            	#end						
+		<!--<td><label for="periodType">$i18n.getString( "period_type" )</label></td>-->
+		<td><select type="text" id="periodTypeName" name="periodTypeName" disabled="disabled" style="display: none">
+			<option value="Weekly" selected="selected">Weekly</option>
 			</select>
-			<img title="$i18n.getString( 'clear_expression' )" onclick="clearRuleExpression()" src="../images/edit-clear.png" style="width: 20px; cursor:pointer;" />
+			<!--<img title="$i18n.getString( 'clear_expression' )" onclick="clearRuleExpression()" src="../images/edit-clear.png" style="width: 20px; cursor:pointer;" />-->
 		</td>
 	</tr>
 	<!--<tr id="sequentialSampleCountTR">
