--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
@@ -26,12 +26,40 @@
 	</tr>
 	<tr>
 		<td>
-			<select type="text" id="ruleType" name="ruleType" onchange="changeRuleType()" style="display: none">
+			<select type="text" id="ruleType" name="ruleType" style="display: none">
 				<option value="SURVEILLANCE" selected="selected">$i18n.getString( "surveillance" )</option>
 			</select>
 		</td>
 	</tr>
-	<tr id="organisationUnitLevelTR">
+    <tr>
+        <td>
+            <select type="text" id="periodTypeName" name="periodTypeName" style="display: none">
+                <option value="Weekly" selected="selected">Weekly</option>
+            </select>
+        </td>
+    </tr>
+
+	<tr>
+        <td style="width:120px"><label for="additionalRuleType">$i18n.getString( "rule type" ) <em title="$i18n.getString( "required" )" class="required">*</em></label></td>
+		<td>
+			<select type="text" id="additionalRuleType" name="additionalRuleType" onchange="changeAdditionalRuleType()">
+				<option value="Default" selected="selected">default</option>
+				<option value="SarampoCaseInOneMonth">sarampo case in a month</option>
+				<option value="MeningiteIncreasedInThreeWeeks">meningite increased in three weeks</option>
+				<option value="DiarrieaCaseInFiveYears">diarriea case in five years</option>
+				<option value="MalariaCaseInFiveYears">malaria case in five years</option>
+			</select>
+		</td>
+	</tr>
+    <tr id="additionalRule" style="display: none">
+        <td><label for="additionalRule">$i18n.getString( "additional rule" ) <span class="tipText">($i18n.getString( "visible_in_default_rule_type" ))</span></label></td>
+        <td>
+			<textarea name="additionalRule"></textarea>
+			<a href="javascript:getHelpContent('additionalRules')" title="Help"><i class="fa fa-question-circle"></i></a>
+		</td>
+    </tr>
+
+    <tr id="organisationUnitLevelTR">
 		<td><label for="organisationUnitLevel">$i18n.getString( "organisation_unit_level" )<em title="$i18n.getString( "required" )" class="required">*</em></label></td>
 		<td>
 			<select type="text" id="organisationUnitLevel" name="organisationUnitLevel">
@@ -42,15 +70,9 @@
 			</select>
 		</td>
 	</tr>
-	<tr>
-		<td>
-			<select type="text" id="periodTypeName" name="periodTypeName" style="display: none">
-				<option value="Weekly" selected="selected">Weekly</option>
-			</select>
-		</td>
-	</tr>
 
-	<tr>
+
+	<tr id="operatorHide">
 		<td><label for="operatorId">$i18n.getString( "operator" ) <em title="$i18n.getString( "required" )" class="required">*</em></label></td>
 		<td>
 			<select id="operator" name="operator">
@@ -66,7 +88,7 @@
 			</select>
 		</td>
 	</tr>
-	<tr>
+	<tr id="leftRightHide">
 		<td></td>
 		<td>
 			<input type="button" value="$i18n.getString( 'edit_left_side' )" style="width:10em" onclick="editLeftExpression();">
